fix: fix overflow

--- a/web/src/components/inspector/InspectorPanel/InspectorPanel.css
+++ b/web/src/components/inspector/InspectorPanel/InspectorPanel.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
+  overflow: auto;
 }
 
 .InspectorPanel__container > * {
